bug fix: OTC and SmartFX icons not align properly

--- a/sass/components/_ciq-form.scss
+++ b/sass/components/_ciq-form.scss
@@ -237,8 +237,7 @@
 }
 
 .cq-toggle ,
-.cq-menu-btn .ic-icon ,
-.cq-chart-size .ic-icon{
+.cq-chart-controls .ic-icon {
     width: 24px;
     height: 24px;
     svg {
